// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoomBox snapshots should render Zoombox 1`] = `
<DocumentFragment>
  <div
    class="css-mu34gm ZoomBox ZoomBox--light ZoomBox--idle ZoomBox--idle--light ZoomBox--default ZoomBox--default--light"
    data-test-box="zoom-box"
    tabindex="0"
  >
    <div
      class="css-wcnq0t ZoomBox__background-mask ZoomBox__background-mask--light"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); display: initial;"
    />
    <div
      class="css-wcnq0t ZoomBox__texture-blank ZoomBox__texture-blank--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    />
    <div
      class="css-fw1hyy ZoomBox__zoom-content ZoomBox__zoom-content--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZoomBox snapshots should render when background is hidden 1`] = `
<DocumentFragment>
  <div
    class="css-mu34gm ZoomBox ZoomBox--light ZoomBox--idle ZoomBox--idle--light ZoomBox--default ZoomBox--default--light"
    data-test-box="zoom-box"
    tabindex="0"
  >
    <div
      class="css-wcnq0t ZoomBox__background-mask ZoomBox__background-mask--light"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); display: none;"
    />
    <div
      class="css-wcnq0t ZoomBox__texture-blank ZoomBox__texture-blank--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    />
    <div
      class="css-fw1hyy ZoomBox__zoom-content ZoomBox__zoom-content--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`ZoomBox snapshots should render when mouse mode is move & cursor state is pressing 1`] = `
<DocumentFragment>
  <div
    class="css-mu34gm ZoomBox ZoomBox--light ZoomBox--lmb ZoomBox--lmb--light ZoomBox--move ZoomBox--move--light ZoomBox--pressing ZoomBox--pressing--light"
    data-test-box="zoom-box"
    tabindex="0"
  >
    <div
      class="css-wcnq0t ZoomBox__background-mask ZoomBox__background-mask--light"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); display: initial;"
    />
    <div
      class="css-wcnq0t ZoomBox__texture-blank ZoomBox__texture-blank--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    />
    <div
      class="css-fw1hyy ZoomBox__zoom-content ZoomBox__zoom-content--light"
      data-test-box=""
      style="transform: translate(0px, 0px) scale(1);"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;
